apps/production/opengym/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opengym
spec:
  template:
    spec:
      containers:
        - name: api
